--- a/NYC_Taxi_Fare.ipynb
+++ b/NYC_Taxi_Fare.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 🚕 NYC Taxi Fare Estimator\n",
+    "#  NYC Taxi Fare Estimator\n",
     "\n",
     "This project predicts the **total cost** of a taxi ride in New York City using pickup time, trip distance, and basic ride details. The model simulates how a platform could estimate fares in real-time, improving rider transparency and business efficiency.\n"
    ]
@@ -16,7 +16,7 @@
    "id": "654750a4",
    "metadata": {},
    "source": [
-    "## 📂 Load Dataset (Colab Compatible)"
+    "## 📂 Load Dataset "
    ]
   },
   {
@@ -54,7 +54,7 @@
    "id": "63719dda",
    "metadata": {},
    "source": [
-    "## 🔍 Initial Exploration & Cleaning"
+    "##  Initial Exploration & Cleaning"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "id": "8b31d38c",
    "metadata": {},
    "source": [
-    "## 🎯 Feature Selection & Target"
+    "##  Feature Selection & Target"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "id": "4af9b5f0",
    "metadata": {},
    "source": [
-    "## 🤖 Model Training & Prediction"
+    "##  Model Training & Prediction"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "id": "7c26cab1",
    "metadata": {},
    "source": [
-    "## 📈 Model Evaluation"
+    "##  Model Evaluation"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "id": "7d657fcb",
    "metadata": {},
    "source": [
-    "## 📊 Prediction Visualization"
+    "##  Prediction Visualization"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "id": "a18b6efe",
    "metadata": {},
    "source": [
-    "## ⏱️ Average Fare by Hour of Day"
+    "##  Average Fare by Hour of Day"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "id": "c927f851",
    "metadata": {},
    "source": [
-    "## 📉 Prediction Error Distribution"
+    "##  Prediction Error Distribution"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "id": "2aed0697",
    "metadata": {},
    "source": [
-    "## 💡 Predict Fare for Custom Input"
+    "##  Predict Fare for Custom Input"
    ]
   },
   {
@@ -271,9 +271,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "## ✅ Conclusion\n",
+    "##  Conclusion\n",
     "\n",
-    "This model demonstrates a realistic fare estimation system using public taxi data. With added geolocation and external features (like weather or zones), this project could be extended into a production-level application or dashboard.\n"
+    "By predicting total fares with high accuracy, this project shows how machine learning can improve transparency and pricing logic in urban transport. It's a strong starting point for smarter fare systems in ride-hailing or mobility platforms.\n"
    ]
   }
  ],
